--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm run build"
-  publish = ".next"
+  command = "npm ci && npm run build:netlify"
+  publish = "out"
 
 [build.environment]
   NODE_VERSION = "20.11.0"
@@ -8,11 +8,11 @@
 
 # Production context
 [context.production]
-  command = "npm run build"
+  command = "npm run build:netlify"
 
 # Deploy Preview context
 [context.deploy-preview]
-  command = "npm run build"
+  command = "npm run build:netlify"
 
 # Redirects and headers
 [[redirects]]
